Виконана домашня робота 3

--- a/index.html
+++ b/index.html
@@ -23,26 +23,31 @@
   <body>
     <!-- Шапка -->
     <header>
-      <div class="container navigation"><a href="./index.html" class="logo-accent no-decor"
-                ><span class="logo">Web</span> studio</a
-              >
-        <nav>
-          <ul class="no-style-type navigation list-nav">
-            <li><a href="./index.html" class="link-nav no-decor">Studio</a></li>
-            <li>
+      <div class="container box nav-list">
+        <nav class="nav-list">
+          <a href="./index.html" class="logo-accent no-decor"
+            ><span class="logo">Web</span> studio</a
+          >
+          <ul class="no-style-type list-nav">
+            <li class="item-nav">
+              <a href="./index.html" class="link-nav no-decor">Studio</a>
+            </li>
+            <li class="item-nav">
               <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
             </li>
-            <li><a href="" class="link-nav no-decor">Contacts</a></li>
+            <li class="item-nav">
+              <a href="" class="link-nav no-decor">Contacts</a>
+            </li>
           </ul>
         </nav>
-        <ul class="no-style-type navigation social-list-nav">
-          <li>
-            <a href="mailto:info@devstudio" class="social-list no-decor"
+        <ul class="no-style-type nav-list">
+          <li class="social-list">
+            <a href="mailto:info@devstudio" class="social-link no-decor"
               >info@devstudio</a
             >
           </li>
-          <li>
-            <a href="tel:+11(000)111-11-11" class="social-list no-decor"
+          <li class="social-list">
+            <a href="tel:+11(000)111-11-11" class="social-link no-decor"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -53,7 +58,10 @@
       <!-- Герой -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <h1 class="hero-title">
+            Effective Solutions<br />
+            for Your Business
+          </h1>
           <button type="button" class="hero-btn">Order Service</button>
         </div>
       </section>
@@ -61,29 +69,29 @@
       <section>
         <div class="container">
           <h2 hidden>Dignity</h2>
-          <ul class="no-style-type">
-            <li>
+          <ul class="dignity-list no-style-type">
+            <li class="dignity-item">
               <h3 class="subtitle">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="dignity-item">
               <h3 class="subtitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="dignity-item">
               <h3 class="subtitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="dignity-item">
               <h3 class="subtitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -97,8 +105,8 @@
       <section>
         <div class="container">
           <h2 class="title">What are we doing</h2>
-          <ul class="no-style-type">
-            <li>
+          <ul class="no-style-type image-list">
+            <li class="image-item">
               <img
                 class="image"
                 src="./images/image-1.jpg"
@@ -107,7 +115,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="image-item">
               <img
                 class="image"
                 src="./images/image-2.jpg"
@@ -116,7 +124,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="image-item">
               <img
                 class="image"
                 src="./images/image-3.jpg"
@@ -132,8 +140,8 @@
       <section class="team">
         <div class="container">
           <h2 class="title">Our Team</h2>
-          <ul class="no-style-type">
-            <li>
+          <ul class="no-style-type team-list">
+            <li class="team-item">
               <img
                 class="image"
                 src="./images/image-4.jpg"
@@ -144,7 +152,7 @@
               <h3 class="subtitle">Mark Guerrero</h3>
               <p class="text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 class="image"
                 src="./images/image-5.jpg"
@@ -155,7 +163,7 @@
               <h3 class="subtitle">Tom Ford</h3>
               <p class="text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 class="image"
                 src="./images/image-6.jpg"
@@ -166,7 +174,7 @@
               <h3 class="subtitle">Camila Garcia</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 class="image"
                 src="./images/image-7.jpg"
