--- a/portfolio.html
+++ b/portfolio.html
@@ -14,29 +14,31 @@
   <body>
     <!-- Шапка -->
     <header>
-      <div class="container">
-        <nav class="">
-          <ul class="no-style-type">
-            <li class="">
-              <a href="./index.html" class="logo-accent no-decor"
-                ><span class="logo">Web</span> studio</a
-              >
+      <div class="container box nav-list">
+        <nav class="nav-list">
+          <a href="./index.html" class="logo-accent no-decor"
+            ><span class="logo">Web</span> studio</a
+          >
+          <ul class="no-style-type list-nav">
+            <li class="item-nav">
+              <a href="./index.html" class="link-nav no-decor">Studio</a>
             </li>
-            <li class=""><a href="./index.html" class="link-nav no-decor">Studio</a></li>
-            <li class="">
+            <li class="item-nav">
               <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
             </li>
-            <li class=""><a href="" class="link-nav no-decor">Contacts</a></li>
+            <li class="item-nav">
+              <a href="" class="link-nav no-decor">Contacts</a>
+            </li>
           </ul>
         </nav>
-        <ul class="no-style-type">
-          <li>
-            <a href="mailto:info@devstudio" class="social-list no-decor"
+        <ul class="no-style-type nav-list">
+          <li class="social-list">
+            <a href="mailto:info@devstudio" class="social-link no-decor"
               >info@devstudio</a
             >
           </li>
-          <li>
-            <a href="tel:+11(000)111-11-11" class="social-list no-decor"
+          <li class="social-list">
+            <a href="tel:+11(000)111-11-11" class="social-link no-decor"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -48,27 +50,27 @@
       <section>
         <div class="container">
           <h2 hidden>Filters</h2>
-          <ul class="no-style-type">
-            <li>
+          <ul class="no-style-type btn-list">
+            <li class="btn-item">
               <button type="button" class="filters-btn">All</button>
             </li>
-            <li>
+            <li class="btn-item">
               <button type="button" class="filters-btn">Web Site</button>
             </li>
-            <li>
+            <li class="btn-item">
               <button type="button" class="filters-btn">App</button>
             </li>
-            <li>
+            <li class="btn-item">
               <button type="button" class="filters-btn">Design</button>
             </li>
-            <li>
+            <li class="btn-item">
               <button type="button" class="filters-btn">Marketing</button>
             </li>
           </ul>
           <!-- Примеры работ -->
           <h2 hidden>Work examples</h2>
-          <ul class="no-style-type">
-            <li>
+          <ul class="no-style-type examples-list">
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -80,13 +82,13 @@
               </a>
               <h3 class="subtitle">Banking App Interface Concept</h3>
               <p class="text">App</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -98,13 +100,13 @@
               </a>
               <h3 class="subtitle">Cashless Payment</h3>
               <p class="text">Marketing</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -116,13 +118,13 @@
               </a>
               <h3 class="subtitle">Meditaion App</h3>
               <p class="text">App</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -134,13 +136,13 @@
               </a>
               <h3 class="subtitle">Taxi Service</h3>
               <p class="text">Marketing</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -152,13 +154,13 @@
               </a>
               <h3 class="subtitle">Screen Illustrations</h3>
               <p class="text">Design</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -170,13 +172,13 @@
               </a>
               <h3 class="subtitle">Online Courses</h3>
               <p class="text">Marketing</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -188,13 +190,13 @@
               </a>
               <h3 class="subtitle">Instagram Stories Concept</h3>
               <p class="text">Design</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -206,13 +208,13 @@
               </a>
               <h3 class="subtitle">Organic Food</h3>
               <p class="text">Web Site</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
               </p>
             </li>
-            <li>
+            <li class="examples-item">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <img
                   class="image"
@@ -224,7 +226,7 @@
               </a>
               <h3 class="subtitle">Fresh Coffee</h3>
               <p class="text">Web Site</p>
-              <p class="text-cloud">
+              <p class="text-cloud" hidden>
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
