--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <!-- Шапка -->
-    <header>
-      <div class="container box nav-list">
+    <header class="box">
+      <div class="container nav-list">
         <nav class="nav-list">
           <a href="./index.html" class="logo-accent no-decor"
             ><span class="logo">Web</span> studio</a
@@ -41,12 +41,12 @@
           </ul>
         </nav>
         <ul class="no-style-type nav-list">
-          <li class="social-list">
+          <li class="social-item">
             <a href="mailto:info@devstudio" class="social-link no-decor"
               >info@devstudio</a
             >
           </li>
-          <li class="social-list">
+          <li class="social-item">
             <a href="tel:+11(000)111-11-11" class="social-link no-decor"
               >+11 (000) 111-11-11</a
             >
@@ -66,7 +66,7 @@
         </div>
       </section>
       <!-- Преимущества -->
-      <section>
+      <section class="dignity">
         <div class="container">
           <h2 hidden>Dignity</h2>
           <ul class="dignity-list no-style-type">
@@ -102,7 +102,7 @@
         </div>
       </section>
       <!-- Продукт -->
-      <section>
+      <section class="product">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="no-style-type image-list">
